--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
             webAppUrl: "https://xdaji.github.io/webapp/#/"
         };
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LF6QYDL62V"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-LF6QYDL62V');
+    </script>
 </head>
 <body>
 <section class="desktop">
