--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="info-activity">
                         <div class="qrcode">
-                            <div class="qr" title="https://dypj.mesft.com/"><canvas width="120" height="120"></canvas><img style="display: none;"></div>
+                            <div class="qr" title="https://daji.app"></div>
                         </div>
                         <div class="cont">
                             <div class="title_">
