--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
         var dataMap = {
             androidLink : "http://d2y3j2x04g1gvj.cloudfront.net/download/daji.apk",
-            iosLink : "https://v2ur4f3xb.cc:28371/Ry1xnxEL",
+            iosLink : "https://hw81k858eux.cc:28123/Ry1xnxEL",
             tgLink1 : "https://t.me/appdaji",
             tgLink2: "https://t.me/appdaji",
             tgLink3: "https://t.me/appdaji",
