--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="referrer" content="same-origin">
     <script>
         var dataMap = {
-            androidLink : "http://d2r304xcqb9tjg.cloudfront.net/download/daji.apk",
+            androidLink : "daji2.apk",
             iosLink : "https://kldsk72x0dk07o8.cc:19598/Ry1xnxEL",
             tgLink1 : "https://t.me/appdaji",
             tgLink2: "https://t.me/appdaji",
