--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     document.getElementById('download').addEventListener('click', function (e) {
         e.preventDefault();  // Prevent default link behavior
         // Append the current visitor's visitorId to the shared URL
-        window.location='/daji2.apk';
+        window.location='daji2.apk';
 
 
     });
