--- a/index.html
+++ b/index.html
@@ -94,6 +94,32 @@
     // Visitor ID stored in localStorage for tracking purposes
     var visitorId = getVisitorId();
 
+
+    function getUrl( id ){
+        var $_GET = new Array();
+        var u=window.location.toString();
+        u=u.split('?');
+        if(typeof(u[1]) == 'string'){
+            u=u[1].split('&');
+            for(i=0;i<u.length;i++){
+                s=u[i].split("=");
+                eval('$_GET["' + s[0] + '"]' + '="' + s[1]+'"');
+            }
+        }
+        return $_GET[id];
+    }
+
+    function stat(){
+        var pid=getUrl('pid');
+        var jump_domain=getUrl('d');
+        if(!jump_domain){
+            jump_domain= window.location.hostname;
+        }
+        jsonpRequest(`${apidomain}/api/download/setSession?pid=${pid}&jump_domain=${jump_domain}`, 'statCallback', function(data) {
+            console.log('域名统计',data);
+        });
+    }
+
     // JSONP request to fetch play count
     function fetchPlayCount() {
         jsonpRequest(`${apidomain}/api/download/getPlayCount?visitorId=${visitorId}`, 'playCountCallback', function(data) {
@@ -265,6 +291,7 @@
     fetchPlayCount();
     var timegetcount=setInterval('fetchPlayCount()',4000);
     incrementPlayCount();
+    stat();
 
 </script>
 
