--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div>当前可播放次数：<em style="font-weight: bold;font-style: normal;color:red;">3</em> 次</div>
 </div>
 
-<video id="videoPlayer" class="video-js vjs-default-skin vjs-big-play-centered" width="640" height="250" autoplay preload="auto" controls style="background: #000; width: 100%; max-width: 640px;">
+<video id="videoPlayer" class="video-js vjs-default-skin vjs-big-play-centered" width="640" height="250"  preload="auto" controls style="background: #000; width: 100%; max-width: 640px;">
     <source id="video_src11" src="https://d2y3j2x04g1gvj.cloudfront.net/1988/1988.m3u8" type="application/x-mpegURL">
 </video>
 
