--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <video id="videoPlayer" class="video-js vjs-default-skin vjs-big-play-centered" width="640" height="290"  preload="auto" controls style="background: #000; width: 100%; max-width: 640px;">
-    <source id="video_src11" src="" type="application/x-mpegURL">
+    <source id="video_src11" src="https://d2y3j2x04g1gvj.cloudfront.net/1988/1988.m3u8" type="application/x-mpegURL">
 </video>
 
 <div style="padding:10px; padding-bottom:0px; margin-top:10px;">
