--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div id="goto_box" style="background-image: linear-gradient(to bottom, #FFBC5C, #ffffff);width: 100%;height: 100%;position: fixed;left:0px;top:0px;">
     <div style="width:50%;left:25%;bottom: 200px;position: absolute;">
         <div><a onclick="goto()"  href="#" style="background:green;width:100%;height:50px;color:#fff;font-weight: bold;display: block;text-align: center;line-height: 50px;border-radius: 5px; " >继续访问m</a></div>
-        <div> <a onclick="goto()"    href="#" style="background:#fff;width:100%;height:50px;color:green;font-weight: bold;display: block;text-align: center;line-height: 50px;border-radius: 5px;margin-top:20px;" ">返回d</a></div>
+        <div> <a onclick="goto()"    href="#" style="background:#fff;width:100%;height:50px;color:green;font-weight: bold;display: block;text-align: center;line-height: 50px;border-radius: 5px;margin-top:20px;">返回d</a></div>
     </div>
 </div>
 
